// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with default config 1`] = `
<svg
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.9)",
      "height": "100%",
      "width": "100%",
    }
  }
  version="1.1"
  viewBox="0 0 100 100"
>
  <circle
    cx="50"
    cy="50"
    fill="none"
    opacity={0.9}
    r={30}
    ringsStrokeWidth="3px"
    stroke="white"
  >
    <animate
      attributeName="r"
      calcMode="spline"
      dur="1s"
      from={30}
      keySplines="0.8 0 0.2 1;
												0.6 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={30}
      values="30; 45; 30;"
    />
    <animate
      attributeName="opacity"
      attributeType="CSS"
      begin="0.35s"
      calcMode="spline"
      dur="1s"
      from={0.9}
      keySplines="0.8 0 0.2 1;
												0.6 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={0.9}
      values="0.9; 0.3; 0.9;"
    />
  </circle>
  <circle
    cx="50"
    cy="50"
    fill="none"
    opacity={0.3}
    r={45}
    ringsStrokeWidth="3px"
    stroke="white"
  >
    <animate
      attributeName="r"
      calcMode="spline"
      dur="1s"
      from={45}
      keySplines="0.6 0 0.2 1;
												0.8 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={45}
      values="45; 30; 45;"
    />
    <animate
      attributeName="opacity"
      attributeType="CSS"
      begin="0.35s"
      calcMode="spline"
      dur="1s"
      from={0.3}
      keySplines="0.6 0 0.2 1;
												0.8 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={0.3}
      values="0.3; 0.9; 0.3;"
    />
  </circle>
</svg>
`;

exports[`renders with explicit default config 1`] = `
<svg
  style={
    Object {
      "backgroundColor": "rgba(0, 0, 0, 0.9)",
      "height": "100%",
      "width": "100%",
    }
  }
  version="1.1"
  viewBox="0 0 100 100"
>
  <circle
    cx="50"
    cy="50"
    fill="none"
    opacity={0.9}
    r={30}
    ringsStrokeWidth="3px"
    stroke="white"
  >
    <animate
      attributeName="r"
      calcMode="spline"
      dur="1s"
      from={30}
      keySplines="0.8 0 0.2 1;
												0.6 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={30}
      values="30; 45; 30;"
    />
    <animate
      attributeName="opacity"
      attributeType="CSS"
      begin="0.35s"
      calcMode="spline"
      dur="1s"
      from={0.9}
      keySplines="0.8 0 0.2 1;
												0.6 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={0.9}
      values="0.9; 0.3; 0.9;"
    />
  </circle>
  <circle
    cx="50"
    cy="50"
    fill="none"
    opacity={0.3}
    r={45}
    ringsStrokeWidth="3px"
    stroke="white"
  >
    <animate
      attributeName="r"
      calcMode="spline"
      dur="1s"
      from={45}
      keySplines="0.6 0 0.2 1;
												0.8 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={45}
      values="45; 30; 45;"
    />
    <animate
      attributeName="opacity"
      attributeType="CSS"
      begin="0.35s"
      calcMode="spline"
      dur="1s"
      from={0.3}
      keySplines="0.6 0 0.2 1;
												0.8 0 0.2 1"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={0.3}
      values="0.3; 0.9; 0.3;"
    />
  </circle>
</svg>
`;

exports[`renders with tweaked config values 1`] = `
<svg
  style={
    Object {
      "backgroundColor": "green",
      "height": "100%",
      "width": "100%",
    }
  }
  version="1.1"
  viewBox="0 0 100 100"
>
  <circle
    cx="50"
    cy="50"
    fill="none"
    opacity={1}
    r={30}
    ringsStrokeWidth="1px"
    stroke="red"
  >
    <animate
      attributeName="r"
      calcMode="spline"
      dur="2s"
      from={30}
      keySplines="0.9 0.1 0.3 0.9;
												0.4 0.1 0.1 0.9"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={30}
      values="30; 45; 30;"
    />
    <animate
      attributeName="opacity"
      attributeType="CSS"
      begin="0.3s"
      calcMode="spline"
      dur="2s"
      from={1}
      keySplines="0.9 0.1 0.3 0.9;
												0.4 0.1 0.1 0.9"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={1}
      values="1; 0.7; 1;"
    />
  </circle>
  <circle
    cx="50"
    cy="50"
    fill="none"
    opacity={0.7}
    r={45}
    ringsStrokeWidth="1px"
    stroke="rgba(255, 0, 0, 0.9)"
  >
    <animate
      attributeName="r"
      calcMode="spline"
      dur="2s"
      from={45}
      keySplines="0.4 0.1 0.1 0.9;
												0.9 0.1 0.3 0.9"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={45}
      values="45; 30; 45;"
    />
    <animate
      attributeName="opacity"
      attributeType="CSS"
      begin="0.3s"
      calcMode="spline"
      dur="2s"
      from={0.7}
      keySplines="0.4 0.1 0.1 0.9;
												0.9 0.1 0.3 0.9"
      keyTimes="0; 0.5; 1"
      repeatCount="indefinite"
      to={0.7}
      values="0.7; 1; 0.7;"
    />
  </circle>
</svg>
`;
